--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
             <div class="nav-links">
                 <ul>
                     <li>
-                        <a href="https://discord.gg/app" target="_blank" rel="noopener noreferrer">
+                        <a href="https://discord.gg/" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-discord"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://github.com/artemidaaa" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-github"></i>    
                         </a>
                     </li>
@@ -65,7 +65,7 @@
 
         <div class="home-wrapper" id="home">
             <h1 class="title">artemidaaa</h1>
-            <h2 class="subtitle">15 year old <span>developer</span> from the Russia</h2>
+            <h2 class="subtitle">15 year old <span>beginner</span> from the Russia</h2>
             <div class="languages-wrapper">
                 <ul>
                     <li><i class="fab fa-python"></i></li>
