--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="og:image" content="favicon.png">
-        <title>muqari</title>
+        <title>Artemidaaa Visiting Card</title>
         
         <link rel="icon" href="favicon.png" type="image/png">
         <link rel="stylesheet" href="css/style.css">
